tests/samples/negative/types/tuple_field_numeric_access.ax
module tuple_field_numeric_access;

fn main() -> i32 {
    let pair = (1, false);
    return pair.0;
}
